﻿2019-11-27
**********
Add-SD_AnvändareAutosvar - Förenklat hur admin-kontot hämtas
Edit-SD_AdminBehörigheter - Förenklat hur admin-kontot hämtas
Sync-SD_FunkAzureTillExchange - Rensar nu GrantSendOnBehalfTo innan synkning
Sync-SD_RumAzureTillExchange - Korrigerade hämtningen av BookInPolicy
Update-SD_DistErsättAllaMedlemmar - La till felmeddelande om fil inte kan läsas

2019-11-08
**********
Starta PowerShell-Modul - La till felhantering för icke installerade moduler / Importerar nu även modulen MicrosoftTeams
Add-SD_RumBokaFleraAnvändare - Förtydligade dokumentationen
Confirm-SD_AnvändareKontoStatus - Förtydligade dokumentationen
Connect-SD_ToServices - Förtydligade dokumentationen
Edit-SD_AdminBehörigheter - Förtydligade dokumentationen
Get-SD_DistAdresserIListan - Förtydligade dokumentationen
Get-SD_DistÄgare - Förtydligade dokumentationen
Get-SD_RumBokningsbehörighet - Förtydligade dokumentationen
Remove-SD_AnvändareIkonfoto - Förtydligade dokumentationen
Search-SD_AnvändareMessageTrace - Förtydligade dokumentationen
Set-SD_RumBekräftelseMeddelande - Förtydligade dokumentationen
Set-SD_RumBokningsDetaljerSynliga - Förtydligade dokumentationen

2019-11-01
**********
Add-SD_AnvändareTillO365MigPilot - Rättat utskrift när skriptet är klart
Add-SD_RumBokaEnAnvändare - Testar nu om behörighet redan finns
Confirm-SD_AnvändareKontoStatus - Listar nu registrerade enheter / Kontrollerar ifall anställning finns på rätt organisation
Get-SD_AnvändareEnheter - Ny. Hämta registrerade enheter i Azure
Get-SD_DistExporteraFrånFleraTillExcel - Kontrollerar nu format på InputFile
Update-SD_DistErsättAllaMedlemmar - Informerar nu bättre hur mycket som gjorts
Update-SD_Distributionslista - Korrigerade hantering av interna mailadresser

2019-06-28
**********
Get-SD_DatorerADKontoLåstsVid - Resultat sorteras nu
Get-SD_DistExporteraFrånFleraTillExcel - Testar nu om grupp finns, innan skriptet fortsätter
Get-SD_FunkBehörigheter - Skriver nu även ut GrantSendOnBehalfTo